--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "angular-d3-cloud": "^1.1.1",
+    "d3": "^7.3.0",
     "d3-cloud": "^1.2.5",
     "echarts": "^5.3.0",
     "ngx-echarts": "^8.0.1",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.4",
-    "@angular/cli": "~13.1.4",
+    "@angular/cli": "^13.2.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/d3-cloud": "^1.2.5",
     "@types/d3-scale": "^4.0.2",
