--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,14 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "firefox",
+      "request": "launch",
+      "reAttach": true,
+      "name": "Firefox",
+      "preLaunchTask": "npm: start",
+      "url": "http://localhost:4200/"
+    },
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
