--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "d3-cloud": "^1.2.5",
     "echarts": "^5.3.0",
     "ngx-echarts": "^8.0.1",
+    "ngx-owl-carousel-o": "^7.0.1",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/build-angular": "^13.2.6",
     "@angular/cli": "^13.2.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/d3-cloud": "^1.2.5",
